log/build_2022-03-17_17-39-02/rc_data_emulator/stderr.log
  File "/home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator/rc_data_emu.py", line 63
    elif (test_phase=br_abort_from_cs):
                    ^
SyntaxError: invalid syntax

